# MQPackage

./: .gitignore  Cargo.toml  LICENSE  LICENSE.BSD  PROPOSAL.md  README.md
.github/actions/cache-cargo/: action.yml
.github/actions/cache-rust/: action.yml
.github/actions/cache-rustc/: action.yml
.github/actions/scoop/: action.yml
.github/workflows/: bloat.yml  ci.yml  security.yml
libmqp/: Cargo.toml
libmqp/src/: lib.rs
mqp/: Cargo.toml
mqp-cli/: Cargo.toml
mqp-cli/src/: main.rs
mqp/src/: lib.rs  main.rs
mqpkg/: Cargo.toml
mqpkg-cli/: Cargo.toml
mqpkg-cli/src/: logging.rs  main.rs  progress.rs
mqpkg/src/: config.rs  errors.rs  lib.rs  operations.rs  pkgdb.rs  progress.rs  repository.rs  resolver.rs  types.rs
mqpkg/src/operations/: mod.rs
mqpkg/src/pkgdb/: mod.rs  transactions.rs
mqpkg/src/resolver/: candidates.rs  errors.rs  mod.rs  pubgrub.rs  semver.rs
mqpkg/src/resolver/pubgrub/: candidate.rs  mod.rs  provider.rs  types.rs  versionset.rs
mqpkg/src/resolver/pubgrub/providers/: mod.rs  repository.rs
mqpkg/src/resolver/types/: dependencies.rs  mod.rs  name.rs  requirement.rs  version.rs
