[package]
name = "mqpkg-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mqpkg"
path = "src/main.rs"

[dependencies]
mqpkg = { path = "../mqpkg" }
anyhow = "1.0"
camino = "1.0.7"
clap = { version = "3.1.0", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
dunce = "1.0.2"
indicatif = "0.17.0-rc.5"
log = { version = "0.4", features = ["std"] }
pretty_env_logger = "0.4.0"
vfs = "0.5.2"
