[package]
name = "mqpkg"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.0.7"
semver = { version = "1.0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.12.0"
serde_yaml = "0.8"
thiserror = "1.0"
url = { version = "2", features = ["serde"] }
vfs = "0.5.2"
