[package]
name = "mqpkg"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.0.7"
md5 = "0.7.0"
named-lock = "0.1.1"
pubgrub = "0.2.1"
reqwest = { version = "0.11.9", features = ["native-tls", "blocking", "gzip", "json"] }
semver = { version = "1.0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "1.12.0"
serde_yaml = "0.8"
thiserror = "1.0"
url = { version = "2", features = ["serde"] }
vfs = "0.5.2"
